@@ -1,4 +1,4 @@
-# wallet.conf -- Test wallet server configuration.
+# wallet.conf -- Test wallet server configuration.  -*- perl -*-
 # $Id$
 
 # Always test with SQLite.
@@ -7,5 +7,16 @@ $DB_INFO = 'wallet-db';
 
 # Set up a file bucket.
 $FILE_BUCKET = 'test-files';
+
+# Simple auto-creation rules.
+sub default_owner {
+    my ($type, $name) = @_;
+    my $principal = $ENV{REMOTE_USER};
+    if ($type eq 'file' and $name eq 'auto') {
+        return ('auto', [ 'krb5', $principal ]);
+    } else {
+        return;
+    }
+}
 
 1;
